# Topicos_Avancados_2026_1_Equipe_JUD_3_atividade2

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.docker/cloudbeaver/: data-sources.json  initial-data.conf
database/migrations/: 0001_01_01_000000_create_modelo_table.rollback.sql  0001_01_01_000000_create_modelo_table.sql  0001_01_01_000001_create_datasets_table.rollback.sql  0001_01_01_000001_create_datasets_table.sql  0001_01_01_000002_create_perguntas_table.rollback.sql  0001_01_01_000002_create_perguntas_table.sql  0001_01_01_000003_create_respostas_atividade_1_table.rollback.sql  0001_01_01_000003_create_respostas_atividade_1_table.sql  0001_01_01_000004_create_avaliacoes_juiz_table.rollback.sql  0001_01_01_000004_create_avaliacoes_juiz_table.sql
docs/: activity_description.md
src/: __init__.py
src/cli/: __init__.py  app.py
src/controllers/: database_controller.py
src/database/: connection.py
src/repositories/: __init__.py  dataset_repository.py
